cmake_minimum_required(VERSION 2.8.9)
project (zombie)
add_executable(
        Zombie.cpp
        Zombie.hpp
        ZombieEvent.cpp
        ZombieEvent.hpp
        main.cpp day01/ex03/ZombieHorde.cpp day01/ex03/ZombieHorde.hpp day01/ex04/ex04.cpp day01/ex05/Human.cpp day01/ex05/Human.hpp day01/ex07/File.cpp day01/ex07/File.hpp)