cmake_minimum_required(VERSION 2.8.9)
project (zombie)
add_executable(
        Zombie.cpp
        Zombie.hpp
        ZombieEvent.cpp
        ZombieEvent.hpp
        main.cpp day01/ex03/ZombieHorde.cpp day01/ex03/ZombieHorde.hpp day01/ex04/ex04.cpp day01/ex05/Human.cpp day01/ex05/Human.hpp day01/ex07/File.cpp day01/ex07/File.hpp day04/ex02/Squad.cpp day04/ex02/Squad.hpp day04/ex02/TacticalMarine.cpp day04/ex02/TacticalMarine.hpp day04/ex02/AssaultTerminator.cpp day04/ex02/AssaultTerminator.hpp day04/ex02/ISpaceMarine.hpp day04/ex02/ISquad.hpp day04/ex02/main.cpp day04/ex03/AMateria.cpp day04/ex03/AMateria.hpp day04/ex03/Ice.cpp day04/ex03/Ice.hpp day04/ex03/Cure.cpp day04/ex03/Cure.hpp day04/ex03/Character.cpp day04/ex03/Character.hpp day04/ex03/MateriaSource.cpp day04/ex03/MateriaSource.hpp day04/ex03/ICharacter.hpp day04/ex03/IMateriaSource.hpp)